Ensure that Application.getClasses filters Resources as well